[tool.poetry]
name = "repl_python3_CS9-Final-Project-Jennifer-He-and-Charlotte-Li"
version = "0.1.0"
description = ""
authors = ["JenniferHe3 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
image = "^1.5.33"
climage = "^0.1.3"
ansicolors = "^1.1.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
